Changes in QMPlay2 build 15.10.08:
	- new OpenGL|ES 2.0 module,

Changes in QMPlay2 build 15.10.03:
	- user can hide menu bar by pressing Alt+Ctrl+M or from "Widgets" context menu,
	- minimum and maximum frequency in equalizer can be changed,
	- basic WebVTT subtitles support (SRT module),
	- added preamp and dB tooltip to equalizer,
	- fixed possible deadlock in AudioCD,
	- small bugfix,

Changes in QMPlay2 build 15.08.12:
	- deinterlacing fixes in VAApi,
	- minor fixes for Windows,
	- MPRIS2 bugfix,

Changes in QMPlay2 build 15.07.13:
	- fixed problem from previous release with playing video (sometimes video plays at maximum speed),

Changes in QMPlay2 build 15.07.12:
	- keyboard shortcut (Shift+L) for locking widgets,
	- fixed seeking by searching key frames in buffer,
	- aspect ratio is now correctly updated,
	- fixed playback in live streams,
	- small fixes in video playback,
	- VAApi bugfix,

Changes in QMPlay2 build 15.06.26:
	- better VSync support for OpenGL video output,
	- OpenSLES audio output (for Android),
	- basic OS X support,
	- minor bug fixes,

Zmiany w QMPlay2 build 15.06.06:
	- większy pasek zmiany rozmiaru okien dla ekranów dotykowych,
	- zoom na ekranie dotykowym (pinch gesture),
	- poprawiony odczyt okładek płyt z katalogu,
	- kompatybilność z FFmpeg 2.0 oraz 2.1,
	- AudioCD jako osobny moduł,

Zmiany w QMPlay2 build 15.05.30:
	- poprawa drag and drop na playliście,
	- przyspieszenie ładowania playlisty,
	- poprawa operacji na katalogach,
	- poprawa drobnych błędów,

Zmiany w QMPlay2 build 15.05.10:
	- poprawa wyszukiwania w YouTube,

Zmiany w QMPlay2 build 15.03.28:
	- opuszczenie okna przez mysz w trybie pełnoekranowym powoduje zamknięcie wszystkich widgetów,
	- możliwość wybrania domyślnego języka dla napisów i dźwięku,
	- HttpReader i FileReader zastąpiony przez FFReader,
	- obsługa większej liczby formatów w YouTube,
	- zmiany w domyślnym układzie okienek,
	- FFmpeg nie używa już HttpReader,
	- zmiany w oknie "Informacje",